--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+ <form>
+	 <label for="uname">First Name:</label>
+	 <input type="text" name="uname" id="fn"><br>
+	  <label for="lname">Last Name:</label>
+	 <input type="text" name="lname" id="ln"<br>
+	  <label for="ph">Phone Number:</label>
+	 <input type="tel" name="ph"id="pn"><br>
+	 <label for="em">Email ID:</label>
+	 <input type="email" name="em" id="en"><br>
+	 <button type="submit" onclick=showAlert()>Submit</button>
+ </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
