--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	 <label for="uname">First Name:</label>
 	 <input type="text" name="uname" id="fn"><br>
 	  <label for="lname">Last Name:</label>
-	 <input type="text" name="lname" id="ln"<br>
+	 <input type="text" name="lname" id="ln"><br>
 	  <label for="ph">Phone Number:</label>
 	 <input type="tel" name="ph"id="pn"><br>
 	 <label for="em">Email ID:</label>
