--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
  <form>
-	 <label for="uname">First Name:</label>
-	 <input type="text" name="uname" id="fn"><br>
-	  <label for="lname">Last Name:</label>
-	 <input type="text" name="lname" id="ln"><br>
-	  <label for="ph">Phone Number:</label>
-	 <input type="tel" name="ph"id="pn"><br>
-	 <label for="em">Email ID:</label>
-	 <input type="email" name="em" id="en"><br>
+	 <label for="First Name">First Name:</label>
+	 <input type="text" name="First Name" id="fn"><br>
+	  <label for="Last Name">Last Name:</label>
+	 <input type="text" name="Last Name" id="ln"><br>
+	  <label for="Phone Number">Phone Number:</label>
+	 <input type="tel" name="Phone Number"id="pn"><br>
+	 <label for="Email ID">Email ID:</label>
+	 <input type="email" name="Email ID" id="en"><br>
 	 <button type="submit" onclick=showAlert()>Submit</button>
  </form>
 	<!-- the entire body must be written by student -->
